--- a/tempo/index.html
+++ b/tempo/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <iframe height="2000" width="100%" src="https://www.climaeradar.com.br/radarclima?center=-14.16,-53.44&zoom=4.63&layer=wr&loop=true"></iframe>
+    <iframe height="2000" width="100%" src="https://www.climaeradar.com.br/radarclima/franca/9073123?center=-20.5361,-47.4023&placemark=-20.5361,-47.4023&loop=true&tz=America%2FSao_Paulo"></iframe>
 
 	 
 	<script>
