--- a/tempo/index.html
+++ b/tempo/index.html
@@ -20,7 +20,7 @@
 
         function alterarPagina(timer) {
             setTimeout(() => {
-                window.location.replace('https://ici-inc.github.io/IC/IA/dist/index.html');
+                window.location.replace('https://ici-inc.github.io/clima/clima%202/index.html');
             }, timer);
         }
     </script>
