--- a/clima 2/index.html
+++ b/clima 2/index.html
@@ -19,7 +19,7 @@
 
         function alterarPagina(timer) {
             setTimeout(() => {
-                window.location.replace('https://ici-inc.github.io/pre-o/ibovespa/index.html');
+                window.location.replace('https://ici-inc.github.io/jw/jw/index.html');
             }, timer);
         }
     </script>
